--- a/src/component/Main.css
+++ b/src/component/Main.css
@@ -3,12 +3,11 @@
   background-image: url("https://i0.wp.com/post.healthline.com/wp-content/uploads/2020/01/268453-Best_Running_Shoes_for_Flat_Feet-1296x728-header-1296x728.jpg?w=1155&h=1528");
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
   background-position: center;
 
   height: 100vh;
   width: 100%;
-  margin-top: -25px;
+  margin-top: -24px;
 }
 .MainWord {
   /* border: 1px solid black; */
@@ -39,4 +38,5 @@
   border: 2px solid #fff;
   background-color: #bd7973;
   color: white;
+  transition: 1s;
 }
